<resources>
    <string name="app_name">Фотон</string>
    <string name="app_description">Онлайн-галерея фуд-фотографии.\n Для вдохновления и обучения.</string>

    <string name="message_wait">Пожалуйста, подождите</string>
    <string name="message_permission_need">Необходимо дать требуемые разрешения</string>
    <string name="message_permission_need_action">Разрешить</string>

    <string name="menu_bottom_main">Главная</string>
    <string name="menu_bottom_profile">Профиль</string>
    <string name="menu_bottom_load">Загрузить</string>

    <string name="menu_main_exit">Выйти</string>
    <string name="menu_main_enter">Войти</string>
    <string name="menu_main_registration">Зарегистрироваться</string>
    <string name="menu_main_feedback">Связаться с разработчиками</string>

    <string name="menu_profile_new_album">Новый альбом</string>
    <string name="menu_profile_edit_info">Редактрировать информацию</string>
    <string name="menu_profile_edit_avatar">Изменить аватар</string>
    <string name="menu_profile_logout">Выйти</string>

    <string name="menu_album_delete">Удалить</string>
    <string name="menu_album_edit">Редактировать</string>
    <string name="menu_album_add">Добавить фотокарточку</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_registration">Регистрация</string>
    <string name="button_login">Вход</string>
    <string name="button_choose">Выбрать фото</string>
    <string name="button_save">Сохранить</string>S
    <string name="button_search">Найти</string>
    <string name="button_drop">Сбросить</string>

    <string name="dialog_registration">Регистрация</string>
    <string name="dialog_enter">Вход в аккаунт</string>
    <string name="dialog_login">Логин</string>
    <string name="dialog_email">Email</string>
    <string name="dialog_name">Имя</string>
    <string name="dialog_password">Пароль</string>
    <string name="dialog_description">Описание</string>
    <string name="dialog_new_album">Новый альбом</string>
    <string name="dialog_edit_album">Редактировать альбом</string>
    <string name="dialog_delete_album">Вы действительно хотите удалить альбом и все его содержимое?</string>
    <string name="dialog_edit_profile">Редактировать профиль</string>

    <string name="message_err_email">Неверный формат email</string>
    <string name="message_err_password">Разрешены латиница и цифры. Не менее 8 символов</string>
    <string name="message_err_name">Не менее 3 символов</string>
    <string name="message_err_login">Разрешены латиница, цифры и _</string>
    <string name="message_err_description">Не менее 3 и не более 400 символов</string>
    <string name="message_err_net">Нет сети</string>
    <string name="message_err_auth">Необходимо фойти в аккаунт</string>
    <string name="message_err_connect">Плохое соединение</string>
    <string name="message_err_file_size">Размер файла не должен превышать %d мегабайта</string>
    <string name="message_err_create_file">Неудалось создать файл</string>
    <string name="message_api_err_login">Пользователь с таким логином уже существует</string>
    <string name="message_api_err_mail">Пользователь с такой почтой уже существует</string>
    <string name="message_api_err_unknown">Неизвестная ошибка</string>
    <string name="message_api_err_auth_login">"Неверный логин"</string>
    <string name="message_api_err_auth_password">"Неверный пароль"</string>

    <string name="main_message_filter">Применен фильтр</string>
    <string name="main_message_filter_action">Сбросить</string>

    <string-array name="search_tabs">
        <item>Поиск</item>
        <item>Фильтры</item>
    </string-array>
    <string name="search_search">Поиск</string>
    <string name="search_tags">Теги</string>

    <string name="filters_dish">Блюдо</string>
    <string name="filters_dish_meat">Мясо</string>
    <string name="filters_dish_fish">Рыба</string>
    <string name="filters_dish_vegetable">Овощи</string>
    <string name="filters_dish_fruit">Фрукты</string>
    <string name="filters_dish_cheese">Сыр</string>
    <string name="filters_dish_dessert">Десерты</string>
    <string name="filters_dish_drink">Напитки</string>
    <string name="filters_nuance">Оттенки</string>
    <string name="filters_nuance_red">Красный</string>
    <string name="filters_nuance_orange">Оранжевый</string>
    <string name="filters_nuance_yellow">Желтый</string>
    <string name="filters_nuance_green">Зеленый</string>
    <string name="filters_nuance_lightBlue">Голубой</string>
    <string name="filters_nuance_blue">Синий</string>
    <string name="filters_nuance_purple">Фиолетовый</string>
    <string name="filters_nuance_brown">Коричневый</string>
    <string name="filters_nuance_black">Черный</string>
    <string name="filters_nuance_white">Белый</string>
    <string name="filters_decor">Оформление</string>
    <string name="filters_decor_simple">Обычное</string>
    <string name="filters_decor_holiday">Праздничное</string>
    <string name="filters_temp">Температура</string>
    <string name="filters_temp_hot">Горячая</string>
    <string name="filters_temp_normal">Комнатная</string>
    <string name="filters_temp_cold">Холодная</string>
    <string name="filters_light">Свет</string>
    <string name="filters_light_natural">Естественный</string>
    <string name="filters_light_synthetic">Искуственный</string>
    <string name="filters_light_mixed">Смешанный</string>
    <string name="filters_light_dir">Направление света</string>
    <string name="filters_light_dir_forward">Прямой</string>
    <string name="filters_light_dir_back">Контровой</string>
    <string name="filters_light_dir_side">Боковой</string>
    <string name="filters_light_dir_mix">Смешанный</string>
    <string name="filters_light_src">Источник света</string>
    <string name="filters_light_src_1">Один</string>
    <string name="filters_light_src_2">Два</string>
    <string name="filters_light_src_3">Три</string>

    <string name="photocard_title">Фотокарточка</string>
    <string name="photocard_album">Альбомы</string>
    <string name="photocard_card">Карты</string>
    <string name="photocard_menu_favorite">В избранное</string>
    <string name="photocard_menu_favorite_remove">Из избранного</string>
    <string name="photocard_menu_share">Поделиться</string>
    <string name="photocard_menu_download">Скачать</string>
    <string name="photocard_message_download">Фото успешно загружено</string>
    <string name="photocard_message_download_open">Открыть</string>

    <string name="profile_title">Профиль</string>
    <string name="profile_not_auth">Авторизуйтесь,\n чтобы посмотреть\n данные профиля</string>
    <string name="profile_edit_success">Профиль успешно изменен</string>

    <string name="author_title">Автор</string>
    <string name="album_title">Альбом</string>
    <string name="album_create_success">Альбом успешно создан</string>
    <string name="album_delete_success">Альбом успешно удален</string>

    <string name="newcard_choose">Выберите фотокарточку\nиз галлереи и добавьте\nк вашим альбомам</string>
    <string name="newcard_pager_header" formatted="false">Шаг %d из %d</string>
    <string name="newcard_name_hint">Название фотографии</string>
    <string name="newcard_name_title">Укажите название фотографии</string>
    <string name="newcard_tag_title">Укажите теги</string>
    <string name="newcard_tag_hint">Имя тега</string>
    <string name="newcard_param_title">Укажите параметры фотографии</string>
    <string name="newcard_album_title">Выберите альбом</string>
    <string name="newcard_create_success">Фотокарточка успешно добавлена</string>
    <string name="newcard_not_auth">Авторизуйтесь,\n чтобы добавить\n новую фотокарточку</string>
    <string name="newcard_err_title">Необходимо задать имя фотокарточки</string>
    <string name="newcard_err_album">Необходимо задать альбом для фотокарточки</string>

    <string name="send_to">Отправить</string>
    <string name="placeholder_not_available">-</string>
    <string name="placeholder_name_not_available">/  -</string>

</resources>
