<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/view_filters"
    >

    <TextView
        style="@style/CustomText.Black"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/filters_temp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:tag="temperature"
        >

        <io.github.vladimirmi.photon.ui.FilterElementView
            android:id="@+id/hot"
            style="@style/FilterElement"
            android:drawableTop="@drawable/ic_temp_hot"
            android:tag="hot"
            android:text="@string/filters_temp_hot"
            />

        <io.github.vladimirmi.photon.ui.FilterElementView
            android:id="@+id/middle"
            style="@style/FilterElement"
            android:drawableTop="@drawable/ic_temp_normal"
            android:tag="middle"
            android:text="@string/filters_temp_normal"
            />

        <io.github.vladimirmi.photon.ui.FilterElementView
            android:id="@+id/cold"
            style="@style/FilterElement"
            android:drawableTop="@drawable/ic_temp_cold"
            android:tag="cold"
            android:text="@string/filters_temp_cold"
            />
    </LinearLayout>
</merge>