<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
       xmlns:android="http://schemas.android.com/apk/res/android"
       tools:showIn="@layout/view_filters"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filters_light"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginBottom="24dp"
        android:tag="light"
        >

        <io.github.vladimirmi.photon.ui.FilterElementView
            android:text="@string/filters_light_natural"
            android:drawableTop="@drawable/ic_light_natural"
            style="@style/FilterElement"
            android:tag="natural"
            />

        <io.github.vladimirmi.photon.ui.FilterElementView
            android:text="@string/filters_light_synthetic"
            android:drawableTop="@drawable/ic_light_synthetic"
            style="@style/FilterElement"
            android:tag="synthetic"
            />

        <io.github.vladimirmi.photon.ui.FilterElementView
            android:text="@string/filters_light_mixed"
            android:drawableTop="@drawable/ic_light_mixed"
            style="@style/FilterElement"
            android:tag="mixed"
            />
    </LinearLayout>
</merge>