<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:contentPadding="24dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/dialog_registration"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/dialog_login"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/dialog_email"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/dialog_name"
            android:inputType="text"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_field"
            android:hint="@string/dialog_password"
            android:inputType="textPassword"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_login"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/button_ok"
                android:textColor="@android:color/white"
                />

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"
                />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_login"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/button_cancel"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>