<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:contentPadding="24dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            style="@style/CustomText.Black"
            android:id="@+id/dialog_title"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_new_album"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/name_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            />

        <EditText
            android:id="@+id/name"
            style="@style/InputField"
            android:layout_marginBottom="8dp"
            android:hint="@string/dialog_name"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/description_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            />

        <EditText
            android:id="@+id/description"
            style="@style/InputField"
            android:lines="3"
            android:gravity="top"
            android:layout_marginBottom="24dp"
            android:hint="@string/dialog_description"
            android:inputType="textMultiLine"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_ok"
                android:theme="@style/GreyDarkButton"
                />

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:theme="@style/GreyDarkButton"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
