<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
       xmlns:android="http://schemas.android.com/apk/res/android"
       tools:showIn="@layout/view_filters"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filters_decor"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_marginBottom="24dp"
        android:tag="decor"
        >

        <io.github.vladimirmi.photon.features.search.filters.FilterElementView
            android:text="@string/filters_decor_simple"
            android:drawableTop="@drawable/ic_decor_simple"
            style="@style/FilterElement"
            android:tag="simple"
            />

        <io.github.vladimirmi.photon.features.search.filters.FilterElementView
            android:text="@string/filters_decor_holiday"
            android:drawableTop="@drawable/ic_decor_holiday"
            style="@style/FilterElement"
            android:tag="holiday"
            />
    </LinearLayout>
</merge>