<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:contentPadding="24dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/dialog_enter"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            />

        <EditText
            android:id="@+id/email"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/input_field"
            android:hint="@string/dialog_email"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/error"
            />

        <EditText
            android:id="@+id/password"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_field"
            android:inputType="textPassword"
            android:hint="@string/dialog_password"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/ok"
                android:theme="@style/GreyDarkButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_ok"
                />

            <Button
                android:id="@+id/cancel"
                android:theme="@style/GreyDarkButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>